# python-azure-functions-demo

./: .gitignore  README.md  pyproject.toml  requirements.txt  sample-env  test.txt
KonfHubAsciiArt/: __init__.py
KonfHubDemo1/: __init__.py
